# periodic-async

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  class.hpp  main.cpp  make.sh
cmake/: compiler_settings.cmake  config.cmake  include.cmake  unset_conf.cmake
include/: class.hpp  pasync.hpp
src/: CMakeLists.txt  example.cpp  impl.cpp  impl.ipp
